examples/kju/positive/variables/variable_declaration_then_assigment.kju
fun write(a: Int): Unit import

fun kju():Unit{
    var x:Int;
    x=5;
    write(x);
}