examples/kju/negative/wrong_variable_scope.kju
fun kju():Unit{
	{
		var x:Int;
	}
	x=5;
}